// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates > brute: known-good seeds (genome + voxel-grid hash) 1`] = `
[
  {
    "genome": {
      "params": {
        "armLength": 1.037305240891874,
        "armRaise": 0,
        "armSwing": 5.119688982143998,
        "earSize": 0,
        "footLift": 0.034263470526784655,
        "girth": 1.194446365861222,
        "hairCover": 0.5745014897547662,
        "headLoll": 7.991198491305113,
        "headScale": 1.0104511504992844,
        "headTilt": 0,
        "height": 2.0613079600734636,
        "hipWidth": 1.272128116816748,
        "hunch": 12.81325492192991,
        "jawChatter": 5.5843918200116605,
        "jawOpen": 0.6,
        "kneeBend": 7.983378415228799,
        "legLength": 0.9020861791796051,
        "limp": 0.4322151271626353,
        "noseLength": 0.01030446363426745,
        "pantsHue": 83.98204447701573,
        "pantsLength": 0.869190257997252,
        "pantsLight": 0.2025197287206538,
        "pantsTear": 0.022673851903527976,
        "pelvisSway": 5.924953848822042,
        "shirtHue": 19.398732539266348,
        "shirtLight": 0.3262696295743808,
        "shirtTear": 0.21671051596058533,
        "shoulderWidth": 1.4095756217604503,
        "skinHue": 68.51536764996126,
        "skinLight": 0.542964165005833,
        "skinSat": 0.18338038607966156,
        "sleeveLength": 0.7200683455448598,
        "spineTwist": 4.9171970169991255,
        "strideFactor": 0.7210980447474866,
        "woundCount": 2,
      },
      "seed": 100,
      "template": "brute",
      "voxelSize": 0.05,
      "wounds": [
        {
          "angle": 186.65581391192973,
          "bone": "thigh.R",
          "radius": 0.027937999511836096,
          "t": 0.2475496367085725,
        },
        {
          "angle": 307.52790078520775,
          "bone": "shin.R",
          "radius": 0.03974232506286353,
          "t": 0.48850401276722544,
        },
      ],
    },
    "gridHash": "a0e9afd4",
  },
  {
    "genome": {
      "params": {
        "armLength": 0.9925651751924307,
        "armRaise": 30,
        "armSwing": 8.71788159571588,
        "earSize": 0.28,
        "footLift": 0.048891629846766586,
        "girth": 1.2827497283462435,
        "hairCover": 0.567291258671321,
        "headLoll": 9.352232821285725,
        "headScale": 1.0593787739984692,
        "headTilt": 0,
        "height": 2.0920997116714717,
        "hipWidth": 1.2127698207157664,
        "hunch": 9.178954316303134,
        "jawChatter": 13.089250795310363,
        "jawOpen": 1,
        "kneeBend": 16.78596294298768,
        "legLength": 1.0408831655513495,
        "limp": 0.02754447190091014,
        "noseLength": 0.017993343153037133,
        "pantsHue": 337.3519340995699,
        "pantsLength": 0.8116740998579188,
        "pantsLight": 0.19928411601576954,
        "pantsTear": 0.11919749272055924,
        "pelvisSway": 4.076217493508011,
        "shirtHue": 255.13929706066847,
        "shirtLight": 0.3059375662589446,
        "shirtTear": 0.2496564855100587,
        "shoulderWidth": 1.397127444599755,
        "skinHue": 69.47561408393085,
        "skinLight": 0.5434618208091706,
        "skinSat": 0.29456986235920335,
        "sleeveLength": 0.6365201896987855,
        "spineTwist": 2.464721609838307,
        "strideFactor": 0.9860013180645183,
        "woundCount": 1,
      },
      "seed": 200,
      "template": "brute",
      "voxelSize": 0.05,
      "wounds": [
        {
          "angle": 321.26918588764966,
          "bone": "shin.R",
          "radius": 0.0437342157899402,
          "t": 0.5445130757289007,
        },
      ],
    },
    "gridHash": "148ecbc",
  },
  {
    "genome": {
      "params": {
        "armLength": 1.0948064224794507,
        "armRaise": 50,
        "armSwing": 3.107396751176566,
        "earSize": 0,
        "footLift": 0.027963718883693218,
        "girth": 1.1013259806204587,
        "hairCover": 0.32223217519931496,
        "headLoll": 5.674637991935015,
        "headScale": 0.9279603263363242,
        "headTilt": -10,
        "height": 2.242708319425583,
        "hipWidth": 1.1996415046276525,
        "hunch": 11.948506844928488,
        "jawChatter": 3.862978059332818,
        "jawOpen": 0.6,
        "kneeBend": 17.63411044026725,
        "legLength": 0.9544900543754921,
        "limp": 0.08302477025426924,
        "noseLength": 0.015163779207505286,
        "pantsHue": 311.4831812493503,
        "pantsLength": 0.9590367964003235,
        "pantsLight": 0.19279229376697912,
        "pantsTear": 0.08753040554001928,
        "pelvisSway": 2.3774575130082667,
        "shirtHue": 133.34213976748288,
        "shirtLight": 0.42801333793904633,
        "shirtTear": 0.21374275139532983,
        "shoulderWidth": 1.4808972116792574,
        "skinHue": 82.96507542254403,
        "skinLight": 0.4168400368653238,
        "skinSat": 0.19542247358243914,
        "sleeveLength": 0.385193002410233,
        "spineTwist": 2.066961869597435,
        "strideFactor": 0.8282901115948333,
        "woundCount": 0,
      },
      "seed": 300,
      "template": "brute",
      "voxelSize": 0.05,
      "wounds": [],
    },
    "gridHash": "6ad13d24",
  },
]
`;

exports[`templates > runner: known-good seeds (genome + voxel-grid hash) 1`] = `
[
  {
    "genome": {
      "params": {
        "armLength": 1.037305240891874,
        "armRaise": 0,
        "armSwing": 8.532814970239997,
        "earSize": 0,
        "footLift": 0.034263470526784655,
        "girth": 0.8287053048843518,
        "hairCover": 0.5745014897547662,
        "headLoll": 7.991198491305113,
        "headScale": 1.0104511504992844,
        "headTilt": 0,
        "height": 1.8010899667278863,
        "hipWidth": 1.1665537401800976,
        "hunch": 4.167069291695952,
        "jawChatter": 5.5843918200116605,
        "jawOpen": 0.4,
        "kneeBend": 3.835925178602338,
        "legLength": 0.9020861791796051,
        "limp": 0.1296645381487906,
        "noseLength": 0.01030446363426745,
        "pantsHue": 83.98204447701573,
        "pantsLength": 0.869190257997252,
        "pantsLight": 0.2025197287206538,
        "pantsTear": 0.022673851903527976,
        "pelvisSway": 5.924953848822042,
        "shirtHue": 19.398732539266348,
        "shirtLight": 0.3262696295743808,
        "shirtTear": 0.21671051596058533,
        "shoulderWidth": 1.0095756217604501,
        "skinHue": 68.51536764996126,
        "skinLight": 0.542964165005833,
        "skinSat": 0.18338038607966156,
        "sleeveLength": 0.7200683455448598,
        "spineTwist": 4.9171970169991255,
        "strideFactor": 1.0746143855387345,
        "woundCount": 1,
      },
      "seed": 100,
      "template": "runner",
      "voxelSize": 0.041666666666666664,
      "wounds": [
        {
          "angle": 186.65581391192973,
          "bone": "thigh.R",
          "radius": 0.027937999511836096,
          "t": 0.2475496367085725,
        },
      ],
    },
    "gridHash": "31be6f02",
  },
  {
    "genome": {
      "params": {
        "armLength": 0.9925651751924307,
        "armRaise": 0,
        "armSwing": 14.529802659526467,
        "earSize": 0.28,
        "footLift": 0.048891629846766586,
        "girth": 0.9022914402885363,
        "hairCover": 0.567291258671321,
        "headLoll": 9.352232821285725,
        "headScale": 1.0593787739984692,
        "headTilt": 0,
        "height": 1.8267497597262263,
        "hipWidth": 1.0953237848589197,
        "hunch": 2.2287756353616714,
        "jawChatter": 13.089250795310363,
        "jawOpen": 0.6,
        "kneeBend": 9.252900272607803,
        "legLength": 1.0408831655513495,
        "limp": 0.008263341570273041,
        "noseLength": 0.017993343153037133,
        "pantsHue": 337.3519340995699,
        "pantsLength": 0.8116740998579188,
        "pantsLight": 0.19928411601576954,
        "pantsTear": 0.11919749272055924,
        "pelvisSway": 4.076217493508011,
        "shirtHue": 255.13929706066847,
        "shirtLight": 0.3059375662589446,
        "shirtTear": 0.2496564855100587,
        "shoulderWidth": 0.9971274445997551,
        "skinHue": 69.47561408393085,
        "skinLight": 0.5434618208091706,
        "skinSat": 0.29456986235920335,
        "sleeveLength": 0.6365201896987855,
        "spineTwist": 2.464721609838307,
        "strideFactor": 1.3836682044086046,
        "woundCount": 0,
      },
      "seed": 200,
      "template": "runner",
      "voxelSize": 0.041666666666666664,
      "wounds": [],
    },
    "gridHash": "f0cc0ec0",
  },
  {
    "genome": {
      "params": {
        "armLength": 1.0948064224794507,
        "armRaise": 15,
        "armSwing": 5.1789945852942765,
        "earSize": 0,
        "footLift": 0.027963718883693218,
        "girth": 0.7511049838503823,
        "hairCover": 0.32223217519931496,
        "headLoll": 5.674637991935015,
        "headScale": 0.9279603263363242,
        "headTilt": -10,
        "height": 1.9522569328546524,
        "hipWidth": 1.079569805553183,
        "hunch": 3.7058703172951937,
        "jawChatter": 3.862978059332818,
        "jawOpen": 0.4,
        "kneeBend": 9.774837194010615,
        "legLength": 0.9544900543754921,
        "limp": 0.02490743107628077,
        "noseLength": 0.015163779207505286,
        "pantsHue": 311.4831812493503,
        "pantsLength": 0.9590367964003235,
        "pantsLight": 0.19279229376697912,
        "pantsTear": 0.08753040554001928,
        "pelvisSway": 2.3774575130082667,
        "shirtHue": 133.34213976748288,
        "shirtLight": 0.42801333793904633,
        "shirtTear": 0.21374275139532983,
        "shoulderWidth": 1.0808972116792575,
        "skinHue": 82.96507542254403,
        "skinLight": 0.4168400368653238,
        "skinSat": 0.19542247358243914,
        "sleeveLength": 0.385193002410233,
        "spineTwist": 2.066961869597435,
        "strideFactor": 1.199671796860639,
        "woundCount": 0,
      },
      "seed": 300,
      "template": "runner",
      "voxelSize": 0.041666666666666664,
      "wounds": [],
    },
    "gridHash": "1c40ec08",
  },
]
`;

exports[`templates > shambler: known-good seeds (genome + voxel-grid hash) 1`] = `
[
  {
    "genome": {
      "params": {
        "armLength": 1.037305240891874,
        "armRaise": 0,
        "armSwing": 8.532814970239997,
        "earSize": 0,
        "footLift": 0.034263470526784655,
        "girth": 0.9759284878149629,
        "hairCover": 0.5745014897547662,
        "headLoll": 7.991198491305113,
        "headScale": 1.0104511504992844,
        "headTilt": 0,
        "height": 1.621525953419041,
        "hipWidth": 1.1665537401800976,
        "hunch": 15.417673229239881,
        "jawChatter": 5.5843918200116605,
        "jawOpen": 0.6,
        "kneeBend": 8.442359709879383,
        "legLength": 0.9020861791796051,
        "limp": 0.4322151271626353,
        "noseLength": 0.01030446363426745,
        "pantsHue": 83.98204447701573,
        "pantsLength": 0.869190257997252,
        "pantsLight": 0.2025197287206538,
        "pantsTear": 0.022673851903527976,
        "pelvisSway": 5.924953848822042,
        "shirtHue": 19.398732539266348,
        "shirtLight": 0.3262696295743808,
        "shirtTear": 0.21671051596058533,
        "shoulderWidth": 1.0095756217604501,
        "skinHue": 68.51536764996126,
        "skinLight": 0.542964165005833,
        "skinSat": 0.18338038607966156,
        "sleeveLength": 0.7200683455448598,
        "spineTwist": 4.9171970169991255,
        "strideFactor": 0.8710980447474866,
        "woundCount": 2,
      },
      "seed": 100,
      "template": "shambler",
      "voxelSize": 0.041666666666666664,
      "wounds": [
        {
          "angle": 186.65581391192973,
          "bone": "thigh.R",
          "radius": 0.027937999511836096,
          "t": 0.2475496367085725,
        },
        {
          "angle": 307.52790078520775,
          "bone": "shin.R",
          "radius": 0.03974232506286353,
          "t": 0.48850401276722544,
        },
      ],
    },
    "gridHash": "a87f4d64",
  },
  {
    "genome": {
      "params": {
        "armLength": 0.9925651751924307,
        "armRaise": 30,
        "armSwing": 14.529802659526467,
        "earSize": 0.28,
        "footLift": 0.048891629846766586,
        "girth": 1.093666304461658,
        "hairCover": 0.567291258671321,
        "headLoll": 9.352232821285725,
        "headScale": 1.0593787739984692,
        "headTilt": 0,
        "height": 1.6574496636167169,
        "hipWidth": 1.0953237848589197,
        "hunch": 10.571939088404179,
        "jawChatter": 13.089250795310363,
        "jawOpen": 1,
        "kneeBend": 18.59918801113963,
        "legLength": 1.0408831655513495,
        "limp": 0.02754447190091014,
        "noseLength": 0.017993343153037133,
        "pantsHue": 337.3519340995699,
        "pantsLength": 0.8116740998579188,
        "pantsLight": 0.19928411601576954,
        "pantsTear": 0.11919749272055924,
        "pelvisSway": 4.076217493508011,
        "shirtHue": 255.13929706066847,
        "shirtLight": 0.3059375662589446,
        "shirtTear": 0.2496564855100587,
        "shoulderWidth": 0.9971274445997551,
        "skinHue": 69.47561408393085,
        "skinLight": 0.5434618208091706,
        "skinSat": 0.29456986235920335,
        "sleeveLength": 0.6365201896987855,
        "spineTwist": 2.464721609838307,
        "strideFactor": 1.136001318064518,
        "woundCount": 1,
      },
      "seed": 200,
      "template": "shambler",
      "voxelSize": 0.041666666666666664,
      "wounds": [
        {
          "angle": 321.26918588764966,
          "bone": "shin.R",
          "radius": 0.0437342157899402,
          "t": 0.5445130757289007,
        },
      ],
    },
    "gridHash": "c4a85550",
  },
  {
    "genome": {
      "params": {
        "armLength": 1.0948064224794507,
        "armRaise": 50,
        "armSwing": 5.1789945852942765,
        "earSize": 0,
        "footLift": 0.027963718883693218,
        "girth": 0.8517679741606116,
        "hairCover": 0.32223217519931496,
        "headLoll": 5.674637991935015,
        "headScale": 0.9279603263363242,
        "headTilt": -10,
        "height": 1.8331597059965132,
        "hipWidth": 1.079569805553183,
        "hunch": 14.264675793237984,
        "jawChatter": 3.862978059332818,
        "jawOpen": 0.6,
        "kneeBend": 19.577819738769904,
        "legLength": 0.9544900543754921,
        "limp": 0.08302477025426924,
        "noseLength": 0.015163779207505286,
        "pantsHue": 311.4831812493503,
        "pantsLength": 0.9590367964003235,
        "pantsLight": 0.19279229376697912,
        "pantsTear": 0.08753040554001928,
        "pelvisSway": 2.3774575130082667,
        "shirtHue": 133.34213976748288,
        "shirtLight": 0.42801333793904633,
        "shirtTear": 0.21374275139532983,
        "shoulderWidth": 1.0808972116792575,
        "skinHue": 82.96507542254403,
        "skinLight": 0.4168400368653238,
        "skinSat": 0.19542247358243914,
        "sleeveLength": 0.385193002410233,
        "spineTwist": 2.066961869597435,
        "strideFactor": 0.9782901115948334,
        "woundCount": 0,
      },
      "seed": 300,
      "template": "shambler",
      "voxelSize": 0.041666666666666664,
      "wounds": [],
    },
    "gridHash": "2cf85f54",
  },
]
`;
